--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
 
     <application
         android:allowBackup="true"
@@ -51,9 +56,26 @@
             </intent-filter>
         </service>
         
+        <!-- Foreground Service for reliable background processing -->
+        <service
+            android:name=".service.MedicationForegroundService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="specialUse">
+            <property
+                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="medication_reminders" />
+        </service>
+        
         <!-- Notification Receiver -->
         <receiver
             android:name=".service.MedicationNotificationReceiver"
+            android:exported="false" />
+            
+        <!-- Alarm Receiver for scheduled notifications -->
+        <receiver
+            android:name=".service.MedicationAlarmReceiver"
+            android:enabled="true"
             android:exported="false" />
             
         <!-- Boot Receiver to restart notifications after device reboot -->
